--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.1",
-        "merge-stream": "^1.0.1"
+        "merge-stream": "^1.0.1",
+        "node-sass": "^4.11.0",
+        "nodemon": "^1.18.10"
     }
 }
